# ipc

./: CMakeLists.txt  consumer-main.cpp  consumer.cpp  consumer.hpp  log.hpp  monospawn-main.cpp  producer-main.cpp  producer.cpp  producer.hpp  queueconstructionerror.hpp  sharedproducer-main.cpp  std_chrono_duration_to_posix_time_duration.hpp
include/ipc/: common.hpp  consumer.hpp  errors.hpp  monospawn.hpp  producer.hpp  queueerror.hpp  tmp_file_lock.hpp
